package work;

public interface Sorter {
    public void load(Container ps);
    public String[] sortStep();
    public Boolean finish();
}
